<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainNavGraph"
    app:startDestination="@+id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.arch.qvikapplication.presentation.SplashFragment"
        android:label="@string/app_name">

        <action
            android:id="@+id/action_splash_to_channelListFragment"
            app:destination="@+id/channelListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/splashFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/channelListFragment"
        android:name="com.arch.qvikapplication.presentation.channel.ChannelListFragment"
        android:label="@string/channel_list_fragment">
        <action
            android:id="@+id/action_channelList_to_articleListFragment"
            app:destination="@+id/articleListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>


    <fragment
        android:id="@+id/articleListFragment"
        android:name="com.arch.qvikapplication.presentation.articles.ArticleListFragment"
        android:label="@string/article_list_fragment">
        <action
            android:id="@+id/action_channelArticleList_to_articleDetailFragment"
            app:destination="@+id/articleDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/articleDetailFragment"
        android:name="com.arch.qvikapplication.presentation.articles.ArticleDetailFragment"
        android:label="@string/article_detail_fragment" />

    <fragment
        android:id="@+id/channelViewPagerFragment"
        android:name="com.arch.qvikapplication.presentation.viewPager.ChannelViewPagerFragment"
        android:label="@string/channel_view_pager_fragment"></fragment>

</navigation>